<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
    >

        <ImageView
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_80sdp"
            android:id="@+id/img_logo"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:layout_marginTop="@dimen/_100sdp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_80sdp"
            android:layout_gravity="center"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"

                android:id="@+id/et_login_email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="@dimen/_10sdp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"

                android:id="@+id/et_login_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="@dimen/_180sdp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/bt_login"
            android:layout_gravity="center"
            app:cornerRadius="@dimen/_10sdp"
            android:inputType="textFilter"
            android:layout_marginTop="@dimen/_20sdp"
            android:onClick="login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_sign_up"
            android:id="@+id/et_gosignup"
            android:layout_gravity="center"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="#000"
            android:onClick="signUp"

            />

    </LinearLayout>
</layout>